--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.8",
     "@types/nodemailer": "^6.4.17",
     "@types/sequelize": "^4.28.20",
@@ -27,8 +28,8 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
-    "typescript": "^5.8.3",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
@@ -36,15 +37,18 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "nodemailer-express-handlebars": "^7.0.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0"
   }
 }
