--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
